--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
 <meta name="google-site-verification" content="Z3ty71FlUbTTo958yDY18r0VEKerLoKmrMkYpiRPtj8" />
-    <title>Bigbos4d: Link Akun Gratis Situs Slot Online Bigbos4d Resmi</title>
+    <title>Bigbos4d: Link Akun Gratis Situs Slot Online Big bos4d Resmi</title>
       <meta name="description" content="Bigbos4d merupakan link akun gratis pasti jp 100% dari situs slot online bigbos4d resmi menang dengan sangat mudah bersama kami." >
 	  <meta name="keywords" content="Bigbos4d, daftar Bigbos4d, link Bigbos4d, situs Bigbos4d, slot resmi, Slot Gacor">
       <link rel="canonical" href="http://bigbos4d.sesam.hu/">
-      <link rel="amphtml" href="https://gacoerkali.xyz/amp/bigbos4d/">
+      <link rel="amphtml" href="https://gacoerkali.xyz/amp/bigbos4d">
       <meta content="id_ID" property="og:locale">
       <meta content="website" property="og:type">
       <meta content="https://c236d0.myshopify.com/cdn/shop/files/serbu4d_1.png?v=1702987568" property="og:image" />
